Update .NET Core sample to 3.1

--- a/DotNetCore/DotNetCore.csproj
+++ b/DotNetCore/DotNetCore.csproj
@@ -1,14 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Imageflow.NativeRuntime.win-x86_64" Version="1.0.0-rc13" />
+    <PackageReference Include="Imageflow.NativeRuntime.win-x86_64" Version="1.1.0-rc18" />
     <PackageReference Include="Imageflow.Net" Version="0.2.6" />
-    <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
   </ItemGroup>
 
 </Project>
