--- a/DotNetCore/appsettings.json
+++ b/DotNetCore/appsettings.json
@@ -1,10 +1,13 @@
-﻿{
-  "ImageRoot": "/images/",
-  "FilesRoot": "/files/",
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  }
+{
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*",
+
+    "ImageRoot": "/images/",
+    "FilesRoot": "/files/"
 }
