--- a/DotNetCore/Properties/launchSettings.json
+++ b/DotNetCore/Properties/launchSettings.json
@@ -1,10 +1,10 @@
-{
+﻿{
   "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
+    "windowsAuthentication": false, 
+    "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:63633/",
-      "sslPort": 0
+      "applicationUrl": "http://localhost:48381",
+      "sslPort": 44377
     }
   },
   "profiles": {
@@ -18,10 +18,10 @@
     "DotNetCore": {
       "commandName": "Project",
       "launchBrowser": true,
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "applicationUrl": "http://localhost:63651/"
+      }
     }
   }
 }
