--- a/DotNetCore/DotNetCore.csproj
+++ b/DotNetCore/DotNetCore.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Imageflow.NativeRuntime.win-x86_64" Version="1.1.0-rc18" />
-    <PackageReference Include="Imageflow.Net" Version="0.2.6" />
+    <PackageReference Include="Imageflow.NativeRuntime.win-x86_64" Version="1.5.4-rc58" />
+    <PackageReference Include="Imageflow.Net" Version="0.7.19" />
   </ItemGroup>
 
 </Project>
